# MatchingEngine

./: .gitignore  CMakeLists.txt  README.md  hello_test.cpp  main.cpp  testingScript.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
Common/: MemoryPool.h  ThreadQueue.h  defs.h  logger.cpp  logger.h
Common/ThreadClass/: MainThread.h  ThreadB.h
Exe/: build.sh
Include/: ME.h  MSG.h  MatchingEngineCore.h  MatchingEngineServer.h  OrderBook.h  OrderHandler.h  PricePoint.h  Server.h  TradeReportCapture.h  server.h
Include/kafka/: kafkaPublisher.h
OrderClass/: OrderIf.cpp  OrderIf.h
Trader/: CMakeLists.txt  main.cpp
Trader/Include/: Client.h  OrderGenerator.h  OrderSubmit.h
Trader/bu/: Makefile  Trader  cmake_install.cmake
Trader/src/: Client.cpp  OrderGenerator.cpp  OrderSubmit.cpp
src/: OrderBook.cpp  PricePoint.cpp  Server.cpp  TradeReportCapture.cpp  server.cpp
src/kafka/: CMakeLists.txt  common.h  kafkaDefs.h  kafkaPublisher.cpp  kafkaPublisher.h
